# smart-fisher

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: brd.md  development-plan.md  esp-dl-yolo-plan.md  yolo-practical-guide.md
docs/参考程序/esp32-s3-cam/main/: CMakeLists.txt  camera.c  camera.h  led.c  led.h  main.c  sd_card.c  sd_card.h
main/: CMakeLists.txt  Kconfig.projbuild  camera_handler.c  camera_handler.h  ds18b20.c  ds18b20.h  fish_detector.c  fish_detector.h  idf_component.yml  main.c  mqtt_handler.c  mqtt_handler.h
main/models/: README.md
